cos/cos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: cos-ingress
  namespace: cos
spec:
  tls:
  - hosts:
    - https-grafana.sqis.io
    secretName: cos-tls
  rules:
    - host: https-grafana.sqis.io
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: traefik
              port:
                number: 80
